--- a/index.html
+++ b/index.html
@@ -3,60 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time Clock with Date</title>
+    <title>Responsive Web Page</title>
     <style>
         body {
+            background-color: #FFE4C4; /* Skin color background */
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 20%;
-            transition: background-color 0.5s, color 0.5s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
         }
-        #clock {
-            font-size: 2em;
-            font-weight: bold;
+        .container {
+            width: 100%;
+            max-width: 500px;
+            padding: 20px;
+            box-sizing: border-box;
         }
-        #date {
-            font-size: 1.5em;
+        .div1, .div2 {
+            padding: 20px;
+            margin: 10px 0;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        @media (max-width: 600px) {
+            .div1, .div2 {
+                padding: 15px;
+                margin: 5px 0;
+            }
+            .container {
+                padding: 10px;
+            }
         }
     </style>
 </head>
 <body>
-    <div id="date"></div>
-    <div id="clock"></div>
-
-    <script>
-        function updateTime() {
-            const now = new Date();
-            const hours = now.getHours().toString().padStart(2, '0');
-            const minutes = now.getMinutes().toString().padStart(2, '0');
-            const seconds = now.getSeconds().toString().padStart(2, '0');
-            const timeString = `${hours}:${minutes}:${seconds}`;
-
-            const daysOfWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-            const day = daysOfWeek[now.getDay()];
-            const date = now.getDate().toString().padStart(2, '0');
-            const month = (now.getMonth() + 1).toString().padStart(2, '0'); // Months are zero-indexed
-            const year = now.getFullYear();
-            const dateString = `${day}, ${date}/${month}/${year}`;
-
-            document.getElementById('clock').textContent = timeString;
-            document.getElementById('date').textContent = dateString;
-
-            // Change background color based on the time
-            if (hours >= 8 && hours < 16) {
-                document.body.style.backgroundColor = 'yellow';
-                document.body.style.color = 'black';
-            } else if (hours >= 16 && hours < 24) {
-                document.body.style.backgroundColor = 'black';
-                document.body.style.color = 'white';
-            } else {
-                document.body.style.backgroundColor = 'blue';
-                document.body.style.color = 'white';
-            }
-        }
-
-        setInterval(updateTime, 1000);
-        updateTime();  // Initial call to display time immediately
-    </script>
+    <div class="container">
+        <div class="div1">
+            <h2>Div 1</h2>
+            <p>This is the first div.</p>
+        </div>
+        <div class="div2">
+            <h2>Div 2</h2>
+            <p>This is the second div.</p>
+        </div>
+    </div>
 </body>
 </html>
