--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Responsive Web Page</title>
     <style>
         body {
-            background-color: #FFE4C4; /* Skin color background */
+            background-color: #99dd99; /* Skin color background */
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
@@ -63,11 +63,11 @@
     <div class="container">
         <div class="div1">
             <h2>Div 1</h2>
-            <p>This is the first div.</p>
+            <p>🖕Fuck You ashole🖕</p>
         </div>
         <div class="div2">
             <h2>Div 2</h2>
-            <p>This is the second div.</p>
+            <p>Rotate Your Phone. </p>
         </div>
     </div>
 </body>
