--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
 <body>
     <div class="container">
         <div class="div1">
-            <h2>Div 1</h2>
-            <p>🖕Fuck You ashole🖕</p>
+            
+            <p>Rotate Your Phone. </p>
         </div>
         <div class="div2">
-            <h2>Div 2</h2>
+            
             <p>Rotate Your Phone. </p>
+            <p>🖕Fuck You ashole🖕</p>
         </div>
     </div>
 </body>
