--- a/index.html
+++ b/index.html
@@ -3,54 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram-like Background</title>
+    <title>Social Media Buttons</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
-            font-family: Arial, sans-serif;
-        }
-
-        .background {
-            height: 100%;
-            background: linear-gradient(135deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
             display: flex;
             justify-content: center;
             align-items: center;
-            position: relative;
-            overflow: hidden;
+            background: #f0f0f0;
+            font-family: Arial, sans-serif;
         }
 
-        .background::before {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to right, #4c669f, #3b5998, #192f6a);
-            opacity: 0.4;
-            z-index: -1;
+        .buttons {
+            display: flex;
+            gap: 20px;
         }
 
-        .content {
-            text-align: center;
+        .button {
+            padding: 15px 30px;
+            border: none;
+            border-radius: 8px;
             color: white;
-            z-index: 1;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
         }
 
-        .content img {
-            width: 300px;
-            height: auto;
+        .button.instagram {
+            background: linear-gradient(135deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        }
+
+        .button.instagram:hover {
+            background: linear-gradient(135deg, #bc1888 0%, #cc2366 25%, #dc2743 50%, #e6683c 75%, #f09433 100%);
+        }
+
+        .button.facebook {
+            background: linear-gradient(135deg, #4c669f, #3b5998, #192f6a);
+        }
+
+        .button.facebook:hover {
+            background: linear-gradient(135deg, #192f6a, #3b5998, #4c669f);
+        }
+
+        .button.whatsapp {
+            background: linear-gradient(135deg, #25D366, #128C7E, #075E54);
+        }
+
+        .button.whatsapp:hover {
+            background: linear-gradient(135deg, #075E54, #128C7E, #25D366);
         }
     </style>
 </head>
 <body>
-    <div class="background">
-        <div class="content">
-            <!-- Your content goes here -->
-            <h1>Welcome to My Website</h1>
-            <p>This is an Instagram-like background.</p>
-        </div>
+    <div class="buttons">
+        <button class="button instagram">Instagram</button>
+        <button class="button facebook">Facebook</button>
+        <button class="button whatsapp">WhatsApp</button>
     </div>
 </body>
 </html>
